Adding Studio Lab link

--- a/Getting Started.ipynb
+++ b/Getting Started.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+    "cell_type": "markdown",
+    "id": "ca6f63ew-79e9-4efc-836a-040000ce8c89",
+    "metadata": {
+     "tags": []
+    },
+    "source": [
+     "[![Open In Studio Lab](https://studiolab.sagemaker.aws/studiolab.svg)](https://studiolab.sagemaker.aws/import/github/juwisnie/studio-lab-demo/blob/main/Getting%20Started.ipynb)"
+    ]
+   },
+  {
    "cell_type": "markdown",
    "id": "ca6f6ed6-79e9-4efc-836a-040000ce8c89",
    "metadata": {
@@ -408,3 +418,4 @@
  },
  "nbformat": 4,
  "nbformat_minor": 5
+}
